Kan kun uploade movies. Laver korrekt DB.